resource的资源路径加载和解析，增加部分注释